kqed_dev4/src/objects/Campaign_Criteria_Template__c.object
<CustomObject>
    <fields>
        <fullName>Advance_Filter__c</fullName>
        <label>Advance Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead</label>
        <type>Checkbox</type>
    </fields>
    <label>Campaign Criteria Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Criteria Template</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>